sumo/tests/traci/Scenario/DomRoadMap/InvalidVariableId/testclient_out.traci
TraCITestClient output file. Date: Mon May 19 21:59:20 2008


-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Scenario>:
  flag=0 domain=0 domainId=0 variable=254 valueDataType=0 [no value sent]
.. Answered with error to command (115), [description: Unknown domain variable specified]

-> Command sent: <SimulationStep>:
  TargetTime=2 PosFormat=1
----
Error while receiving command: tcpip::Socket::receive() @ recv: Software caused tcpip::Socket abort
----
Error while sending command: send failed: Software caused tcpip::Socket abort
